<resources>
    <string name="app_name">MCHelper</string>
    <string name="menu_action_bar_read_from_device">读入配置</string>
    <string name="menu_action_bar_write_to_device">写入配置</string>
    <string name="menu_action_bar_read_from_file">打开配置文件</string>
    <string name="menu_action_bar_write_to_file">保存配置文件</string>
    <string name="menu_action_bar_share">分享</string>
    <string name="menu_action_bar_write_to_file_input">请输入文件名称</string>
    <string name="menu_action_bar_write_to_file_input_empty">文件名不能为空</string>
    <string name="menu_action_bar_write_to_file_existed">该文件已存在，是否替换？</string>
    <string name="menu_action_bar_write_to_file_success">写入文件成功</string>
    <string name="menu_action_bar_write_to_file_fail">写入文件失败</string>
    <string name="menu_action_bar_read_from_file_choice">请选择配置文件</string>
    <string name="menu_action_bar_read_from_file_empty">没有找到任何配置文件</string>
    <string name="menu_action_bar_read_from_file_fail">读入文件失败</string>
    <string name="menu_action_bar_read_from_file_success">读入文件成功</string>
    <string name="menu_action_bar_read_from_device_confirm">开始从设备中读入文件</string>
    <string name="menu_action_bar_write_to_device_confirm">开始向设备写入配置</string>
    <string name="tab_title_setting">配置</string>
    <string name="tab_title_status">状态</string>
    <string name="tab_title_data">数据</string>
    <string name="tab_title_system">系统</string>
    <string name="setting_system_info_title">系统</string>
    <string name="setting_system_info_content_name">名称</string>
    <string name="setting_system_info_content_name_hint">请输入名称</string>
    <string name="setting_system_info_content_password">密码</string>
    <string name="setting_system_info_content_password_hint">请输入密码</string>
    <string name="setting_system_info_content_zone">时区</string>
    <string name="setting_system_info_content_bluetooth_time">蓝牙时长</string>
    <string name="setting_system_info_content_bluetooth_time_hint">1 ~ 1440</string>
    <string name="setting_system_info_content_bluetooth_time_unit">分钟</string>
    <string name="setting_system_info_content_bluetooth_time_switch_on">启用</string>
    <string name="setting_system_info_content_bluetooth_time_switch_off">禁用</string>
    <string name="setting_channel">通道</string>
    <string name="setting_channel_default_edit_view_formula">转换公式</string>
    <string name="setting_channel_default_edit_view_formula_on">On</string>
    <string name="setting_channel_default_edit_view_formula_off">Off</string>
    <string name="setting_channel_sht_temperature">温度</string>
    <string name="setting_channel_sht_humidity">湿度</string>
    <string name="setting_channel_sht_dew_point">露点温度</string>
    <string name="setting_channel_sht_on">On</string>
    <string name="setting_channel_sht_off">Off</string>
    <string name="setting_channel_warm_time">预热时长</string>
    <string name="setting_channel_warm_time_unit">毫秒</string>
    <string name="setting_channel_variable_name">变量名称</string>
    <string name="setting_channel_variable_name_hint">请输入变量名称</string>
    <string name="setting_channel_variable_sensor_address">传感器地址</string>
    <string name="setting_channel_variable_sensor_address_hint">请输入地址(1~254)</string>
    <string name="setting_channel_variable_register_type">寄存器组</string>
    <string name="setting_channel_variable_data_type">数据类型</string>
    <string name="setting_channel_variable_register_address">寄存器地址</string>
    <string name="setting_channel_variable_register_address_hint">请输入地址(1~99999)</string>
    <string name="setting_channel_variable_signal_type">信号类型</string>
    <string name="setting_channel_signal_type_voltage">电压</string>
    <string name="setting_channel_signal_type_current">电流</string>
    <string name="setting_channel_title_sht">SHT通道</string>
    <string name="setting_channel_title_rs485">RS485通道</string>
    <string name="setting_channel_rs485_model">模式</string>
    <string name="setting_channel_rs485_model_master">主机</string>
    <string name="setting_channel_rs485_model_slave">从机</string>
    <string name="setting_channel_rs485_protocol">协议</string>
    <string name="setting_channel_rs485_protocol_rtu">MODBUS RTU</string>
    <string name="setting_channel_rs485_protocol_ascii">MODBUS-ASCII</string>
    <string name="setting_channel_rs485_slave_address">从机地址</string>
    <string name="setting_channel_rs485_slave_address_hint">请输入地址(0~255)</string>
    <string name="setting_channel_rs485_baud">波特率</string>
    <string name="setting_channel_multi_variable_sensor">传感器</string>
    <string name="setting_channel_multi_variable_sensor_add">添加</string>
    <string name="setting_channel_title_sdi">SDI通道</string>
    <string name="setting_battery">电源</string>
    <string name="setting_battery_pattern">供电模式</string>
    <string name="setting_battery_pattern_order">顺序</string>
    <string name="setting_battery_pattern_custom">自定义</string>
    <string name="setting_battery_channel_mode_null">暂无</string>
    <string name="setting_battery_channel_mode_auto">自动</string>
    <string name="setting_battery_channel_mode_always">常开</string>
    <string name="setting_battery_channel_mode_external">外部</string>
    <string name="setting_battery_time_begin">开始</string>
    <string name="setting_battery_time_live">时长</string>
    <string name="setting_measuring">测量</string>
    <string name="setting_measuring_plan">测量计划</string>
    <string name="setting_measuring_time">测量时间</string>
    <string name="setting_measuring_interval">测量间隔</string>
    <string name="setting_measuring_variables">测量变量</string>
    <string name="setting_storage">存储</string>
    <string name="setting_storage_plan">存储计划</string>
    <string name="setting_storage_time">存储时间</string>
    <string name="setting_storage_interval">存储间隔</string>
    <string name="setting_storage_send">远程发送</string>
    <string name="setting_network">网络</string>
    <string name="setting_network_mode">关机模式</string>
    <string name="setting_network_mode_auto">自动</string>
    <string name="setting_network_mode_always">常开</string>
    <string name="setting_network_time">关机时长</string>
    <string name="setting_network_address">服务器地址</string>
    <string name="setting_network_port">服务器端口</string>
    <string name="setting_time_hour">时</string>
    <string name="setting_time_minute">分</string>
    <string name="setting_time_second">秒</string>
    <string name="setting_time_millisecond">毫秒</string>
    <string name="setting_time_picker_tip_begin">请选择起始时间</string>
    <string name="setting_time_picker_tip_live">请选择持续时间</string>
    <string name="setting_time_picker_tip_end">请选择结束时间</string>
    <string name="status_system">系统</string>
    <string name="status_system_version">型号/版本</string>
    <string name="status_system_serial">序列号</string>
    <string name="status_system_time">时间</string>
    <string name="status_system_synchronize">同步</string>
    <string name="status_status">状态</string>
    <string name="status_status_status">电压</string>
    <string name="status_status_error_code">状态/故障码</string>
    <string name="status_status_location">GPS坐标</string>
    <string name="status_storage">存储</string>
    <string name="status_storage_memory">内存</string>
    <string name="status_storage_sdcard">SD卡</string>
    <string name="status_network">网络</string>
    <string name="status_network_status">工作状态</string>
    <string name="status_network_name">网络名称</string>
    <string name="status_sim_no">SIM卡号</string>
    <string name="status_network_strength">信号强度</string>
    <string name="status_network_error_rate">误码率</string>
    <string name="status_network_error_flag">错误标志</string>
    <string name="status_network_on_time">剩余时间</string>
    <string name="status_network_wait_time">操作延时</string>
    <string name="status_network_retry_time">重试次数</string>
    <string name="status_control">运行</string>
    <string name="status_control_measuring">测量</string>
    <string name="status_control_measuring_status_pending">剩余暂停时间(分钟):</string>
    <string name="status_control_measuring_status_running">运行中</string>
    <string name="status_control_measuring_tip">请设置暂停时间（分钟）</string>
    <string name="status_control_measuring_start">启动</string>
    <string name="status_control_measuring_pause">暂停</string>
    <string name="status_control_battery">电源</string>
    <string name="status_control_battery_status_running">剩余运行时间:</string>
    <string name="status_control_battery_status_closing">停止中</string>
    <string name="status_control_battery_tip">请设置打开时间（分钟）</string>
    <string name="status_control_battery_start">启动</string>
    <string name="status_control_battery_pause">关闭</string>
    <string name="status_control_network">网络</string>
    <string name="status_control_network_start">启动</string>
    <string name="status_control_network_start_tip">请选择启动模式</string>
    <string name="status_control_network_start_normal">正常</string>
    <string name="status_control_network_start_debug">调试</string>
    <string name="status_control_network_close">关闭</string>
    <string name="status_control_network_close_tip">请选择关闭模式</string>
    <string name="status_control_network_close_power">关闭电源</string>
    <string name="status_control_network_close_tcp">停止TCP连接</string>
    <string name="status_control_bluetooth">蓝牙</string>
    <string name="status_control_bluetooth_start">打开</string>
    <string name="status_control_bluetooth_close">关闭</string>
    <string name="status_control_collector">采集器</string>
    <string name="status_control_collector_reset">复位</string>
    <string name="status_control_collector_reset_tip">请选择重启模式</string>
    <string name="status_control_collector_reset_warm">热重启</string>
    <string name="status_control_collector_reset_cold">冷重启</string>
    <string name="data_current">实时数据</string>
    <string name="data_current_detail">详细数据</string>
    <string name="data_current_detail_table">储存表</string>
    <string name="data_current_detail_current">实时值</string>
    <string name="data_current_detail_average">平均值</string>
    <string name="data_current_detail_max">最大值</string>
    <string name="data_current_detail_min">最小值</string>
    <string name="data_current_detail_period">周期积累值</string>
    <string name="data_current_detail_ever">永久积累</string>
    <string name="data_current_detail_reset">重置</string>
    <string name="data_history">历史数据</string>
    <string name="data_history_download">历史数据下载</string>
    <string name="data_history_download_tip">请选择需要下载的记录</string>
    <string name="data_history_download_all">全部</string>
    <string name="data_history_download_new">新记录</string>
    <string name="data_history_download_success">下载成功</string>
    <string name="data_history_memory_backup">内存数据</string>
    <string name="data_history_memory_backup_success">备份成功</string>
    <string name="data_history_memory_backup_tip">请选择需要备份的数据</string>
    <string name="data_history_memory_backup_all">全部</string>
    <string name="data_history_memory_backup_record">设置和记录</string>
    <string name="data_history_clear">历史记录</string>
    <string name="data_history_clear_tip">请选择正确的设备日期</string>
    <string name="data_history_clear_success">清除历史记录成功</string>
    <string name="data_history_photo">拍照</string>
    <string name="data_history_photo_high">高清</string>
    <string name="data_history_photo_med">标准</string>
    <string name="data_history_photo_low">快速</string>
    <string name="data_history_photo_local">本地照片</string>
    <string name="data_history_photo_local_view">查看照片</string>
    <string name="system_operation">其他</string>
    <string name="system_operation_cloud">云端</string>
    <string name="system_operation_manager">文件管理</string>
    <string name="system_operation_update">自动更新</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
</resources>