<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.actionbartest.MainActivity">

    <item
        android:id="@+id/menu_action_bar_read_from_device"
        android:showAsAction="never"
        android:title="@string/menu_action_bar_read_from_device" />

    <item
        android:id="@+id/menu_action_bar_write_to_device"
        android:showAsAction="never"
        android:title="@string/menu_action_bar_write_to_device" />
    <item
        android:id="@+id/menu_action_bar_read_from_file"
        android:showAsAction="never"
        android:title="@string/menu_action_bar_read_from_file" />
    <item
        android:id="@+id/menu_action_bar_write_to_file"
        android:showAsAction="never"
        android:title="@string/menu_action_bar_write_to_file" />

    <item
        android:id="@+id/menu_action_test"
        android:showAsAction="never"
        android:title="测试" />

</menu>