<?xml version="1.0" encoding="utf-8"?>
<org.holoeverywhere.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <org.holoeverywhere.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <org.holoeverywhere.widget.TextView
            style="@style/layout_left_style"
            android:text="@string/setting_system_info_content_name" />

        <org.holoeverywhere.widget.EditText
            android:id="@+id/et_setting_system_info_name"
            style="@style/layout_right_style"
            android:hint="@string/setting_system_info_content_name_hint"
            android:maxLength="10"/>
    </org.holoeverywhere.widget.LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider_line" />

    <org.holoeverywhere.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <org.holoeverywhere.widget.TextView
            style="@style/layout_left_style"
            android:text="@string/setting_system_info_content_password" />

        <org.holoeverywhere.widget.EditText
            android:id="@+id/et_setting_system_info_password"
            style="@style/layout_right_style"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/setting_system_info_content_password_hint"
            android:maxLength="6"/>
    </org.holoeverywhere.widget.LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider_line" />

    <org.holoeverywhere.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <org.holoeverywhere.widget.TextView
            style="@style/layout_left_style"
            android:text="@string/setting_system_info_content_zone" />

        <org.holoeverywhere.widget.TextView
            android:id="@+id/tv_setting_system_info_zone"
            style="@style/layout_right_style" />
    </org.holoeverywhere.widget.LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider_line" />

    <org.holoeverywhere.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <org.holoeverywhere.widget.TextView
            style="@style/layout_left_style"
            android:text="@string/setting_system_info_content_bluetooth_time"/>

        <org.holoeverywhere.widget.LinearLayout
            style="@style/layout_right_style"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <org.holoeverywhere.widget.Switch
                android:id="@+id/sw_setting_system_info_bluetooth_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/setting_system_info_content_bluetooth_time_switch_off"
                android:textOn="@string/setting_system_info_content_bluetooth_time_switch_on"
                android:textSize="@dimen/text_size_medium" />

            <org.holoeverywhere.widget.EditText
                android:id="@+id/et_setting_system_info_bluetooth_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_medium" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tv_setting_system_info_bluetooth_time_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/setting_system_info_content_bluetooth_time_unit"
                android:textSize="@dimen/text_size_medium" />


        </org.holoeverywhere.widget.LinearLayout>

    </org.holoeverywhere.widget.LinearLayout>

</org.holoeverywhere.widget.LinearLayout>
