<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/layout_left_style"
                android:text="@string/setting_network_mode" />

            <RadioGroup
                android:id="@+id/rg_view_setting_network_edit_mode"
                style="@style/layout_right_style"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_view_setting_network_edit_mode_auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_network_mode_auto"
                    android:textSize="@dimen/text_size_medium" />

                <RadioButton
                    android:id="@+id/rb_view_setting_network_edit_mode_always"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_network_mode_always"
                    android:textSize="@dimen/text_size_medium" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_view_setting_network_edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/layout_left_style"
                android:text="@string/setting_network_time" />

            <com.vgomc.mchelper.widget.TimeEditView
                android:id="@+id/tev_view_setting_network_edit_time"
                style="@style/layout_right_style" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/layout_left_style"
                android:text="@string/setting_network_address" />

            <EditText
                android:id="@+id/et_view_setting_network_edit_address"
                style="@style/layout_right_style"
                android:maxLength="40"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/layout_left_style"
                android:text="@string/setting_network_port" />

            <EditText
                android:id="@+id/et_view_setting_network_edit_port"
                style="@style/layout_right_style" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
