<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_view_setting_channel_variable_subject"
                style="@style/layout_left_style" />

            <LinearLayout
                style="@style/layout_right_style"
                android:gravity="left">

                <Switch
                    android:id="@+id/sw_view_setting_channel_variable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_view_setting_channel_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/offset_less"
                android:layout_marginRight="@dimen/offset_less"
                android:background="@color/color_divider_line" />

            <LinearLayout
                android:id="@+id/ll_view_setting_channel_variable_warm_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_left_style"
                    android:text="@string/setting_channel_warm_time" />

                <TextView
                    android:id="@+id/tv_view_setting_channel_variable_warm_time"
                    style="@style/layout_right_style" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_left_style"
                    android:text="@string/setting_channel_variable_name" />

                <EditText
                    android:id="@+id/et_view_setting_channel_variable_name"
                    style="@style/layout_right_style" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_view_setting_channel_variable_sensor_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_left_style"
                    android:text="@string/setting_channel_variable_sensor_address" />

                <EditText
                    android:id="@+id/et_view_setting_channel_variable_sensor_address"
                    style="@style/layout_right_style"
                    android:hint="@string/setting_channel_variable_sensor_address_hint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_view_setting_channel_variable_register_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_left_style"
                    android:text="@string/setting_channel_variable_register_type" />

                <Spinner
                    android:id="@+id/sp_view_setting_channel_variable_register_type"
                    style="@style/layout_right_style" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_view_setting_channel_variable_register_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_left_style"
                    android:text="@string/setting_channel_variable_register_address" />

                <EditText
                    android:id="@+id/et_view_setting_channel_variable_register_address"
                    style="@style/layout_right_style"
                    android:hint="@string/setting_channel_variable_register_address_hint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_view_setting_channel_variable_data_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_left_style"
                    android:text="@string/setting_channel_variable_data_type" />

                <Spinner
                    android:id="@+id/sp_view_setting_channel_variable_data_type"
                    style="@style/layout_right_style" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_view_setting_channel_variable_signal_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_left_style"
                    android:text="@string/setting_channel_variable_signal_type" />

                <RadioGroup
                    android:id="@+id/rg_view_setting_channel_signal_type"
                    style="@style/layout_right_style"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_view_setting_channel_signal_type_voltage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/offset_less"
                        android:text="@string/setting_channel_signal_type_voltage"
                        android:textSize="@dimen/text_size_medium" />

                    <RadioButton
                        android:id="@+id/rb_view_setting_channel_signal_type_current"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/offset_less"
                        android:text="@string/setting_channel_signal_type_current"
                        android:textSize="@dimen/text_size_medium" />
                </RadioGroup>
            </LinearLayout>

            <com.vgomc.mchelper.widget.DefaultFormulaEditView
                android:id="@+id/dfev_view_setting_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
