<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_setting_channel_sht_subject"
            style="@style/layout_left_style" />

        <FrameLayout style="@style/layout_right_style">

            <Switch
                android:id="@+id/sw_setting_channel_sht_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/setting_channel_sht_off"
                android:textOn="@string/setting_channel_sht_on"
                android:textSize="@dimen/text_size_medium" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_setting_channel_sht_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/offset_less"
            android:layout_marginRight="@dimen/offset_less"
            android:background="@color/color_divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/layout_left_style"
                android:text="@string/setting_channel_variable_name" />

            <EditText
                android:id="@+id/et_setting_channel_sht_variable_name"
                style="@style/layout_right_style"
                android:hint="@string/setting_channel_variable_name_hint" />
        </LinearLayout>

        <com.vgomc.mchelper.widget.DefaultFormulaEditView
            android:id="@+id/dfev_setting_channel_sht"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
